# SkiaTestFramework

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/skiatestframework/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidOut.cpp  AndroidOut.h  CMakeLists.txt  ColorMode.h  My_Old_Renderer.cpp  My_Old_Renderer.h  My_Renderer.cpp  My_Renderer.h  Singleton.h  SkiaPipeline.cpp  SkiaPipeline.h  native-lib.cpp  old_native-lib.cpp
app/src/main/cpp/OpenGLES/: EglManager.cpp  EglManager.h  GLSurface.h  SkiaOpenGLPipeline.cpp  SkiaOpenGLPipeline.h
app/src/main/cpp/Vulkan/: GrVkExtensions.h  SkiaVulkanPipeline.cpp  SkiaVulkanPipeline.h  VulkanManager.cpp  VulkanManager.h  VulkanSurface.cpp  VulkanSurface.h
app/src/main/java/com/example/skiatestframework/: MainActivity.kt  SkiaSurfaceView.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/skiatestframework/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
